# AveMediaBridge

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build_release.bat  git_branch.bat  git_commit_all.bat
app/: FrameCountPolicyTest.cpp  PcmExtentAudit.cpp  main.cpp
docs/: AveMediaBridge_Architecture.md  AveMediaBridge_FrameCountPolicy.md  AveMediaBridge_ProfessionalArchitectureReview.md  AveMediaBridge_RefactorPlan.md
docs/dependencies/: FFmpeg714MatroskaCodecDelayBackport.md
docs/research/: OggVorbisPcmExtentAuthorityAudit.md
include/AveMediaBridge/: AveMediaBridge.hpp  AveMediaBridgeApi.hpp
include/AveMediaBridge/Core/: AudioBufferF32.hpp  AudioImportResult.hpp  AudioStats.hpp  AveMediaError.hpp  MediaInfo.hpp
include/AveMediaBridge/Export/: FfmpegWavAudioExporter.hpp
include/AveMediaBridge/Import/: FfmpegAudioImporter.hpp
include/AveMediaBridge/Process/: AudioBufferProcessor.hpp
src/: AveMediaBridge.cpp
src/Core/: AudioBufferF32.cpp  AudioStats.cpp  MediaBridgeError.cpp  MediaBridgeError.hpp
src/Decode/: AudioDecodeHelpers.cpp  AudioDecodeHelpers.hpp  AudioPresentationSlice.cpp  AudioPresentationSlice.hpp  PcmFormat.cpp  PcmFormat.hpp
src/Diagnostics/: FullScaleClipDiagnostics.hpp
src/Dll/: AveMediaBridgeDll.cpp
src/Export/: FfmpegWavAudioExporter.cpp
src/Ffmpeg/: FfmpegDeleters.hpp  FfmpegHeaders.hpp  FfmpegStreamSelection.cpp  FfmpegStreamSelection.hpp
src/Import/: FfmpegAudioImporter.cpp
src/Probe/: AacAudioSpecificConfig.cpp  AacAudioSpecificConfig.hpp  Ac3Eac3SequentialPresentation.cpp  Ac3Eac3SequentialPresentation.hpp  AdtsAacSequentialPresentation.cpp  AdtsAacSequentialPresentation.hpp  EbmlSequentialReader.cpp  EbmlSequentialReader.hpp  FlacStreamInfo.cpp  FlacStreamInfo.hpp  FrameCountPolicy.cpp  FrameCountPolicy.hpp  MatroskaAacSequentialPresentation.cpp  MatroskaAacSequentialPresentation.hpp  MediaProbeService.cpp  MediaProbeService.hpp  Mp3HeaderPresentation.cpp  Mp3HeaderPresentation.hpp  Mp4Mp3SampleEditTablePresentation.cpp  Mp4Mp3SampleEditTablePresentation.hpp  NutBoundedTailAuthority.cpp  NutBoundedTailAuthority.hpp  OggOpusSequentialPresentation.cpp  OggOpusSequentialPresentation.hpp  PacketScan.cpp  PacketScan.hpp  PresentationBudgetPolicy.cpp  PresentationBudgetPolicy.hpp  ProbeJsonWriter.cpp  ProbeJsonWriter.hpp
src/Process/: AudioBufferProcessor.cpp
src/Utils/: JsonUtils.cpp  JsonUtils.hpp
tests/: Ac3Eac3SequentialPresentationTests.cpp  AdtsAacSequentialPresentationTests.cpp  AudioPresentationEvidenceScanTests.cpp  AudioPresentationSliceTests.cpp  ExactTotalPresentationBudgetTests.cpp  FlacStreamInfoPresentationAuthorityTests.cpp  MatroskaAacSequentialPresentationTests.cpp  MatroskaCodecDelaySkipTests.cpp  Mp3HeaderPresentationAuthorityTests.cpp  Mp4Mp3LoadingReadyPresentationTests.cpp  Mp4Mp3SampleEditTablePresentationTests.cpp  NutBoundedTailAuthorityTests.cpp  OggOpusSequentialPresentationTests.cpp  manual_samples.txt
tests/media/: generate_matroska_codec_delay_fixture.ps1
